<resources>
    <string name="app_name">Taxinearu</string>
    <string name="action_settings">Settings</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="for_pass">Forgot Password?</string>
    <string name="still">Still not Connected?</string>
    <string name="sign_up">Sign up</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="contact">Contact Number</string>
    <string name="email">Email</string>
    <string name="new_email">Email</string>
    <string name="password_signup">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="alternate_email">Alternate Email Address:</string>
    <string name="alternate_email_">Alternate Email Address</string>
    <string name="new_alternate_email">New Alternate Email</string>
    <string name="confirm_next">Confirm &amp; Next</string>
    <string name="title_activity_forgot_password">ForgotPassword</string>
    <string name="security_question1">In which City or Town did your Mother &amp; Father meet?</string>
    <string name="security_answer">Your Answer</string>
    <string name="security_question2">What was the last name of your third grade teacher?</string>
    <string name="ReceiveOffersFromOrganization">Yes, I would like to receive offers and information about product and services from various organization.</string>
    <string name="ReceiveOffersAboutTaxinearu">Yes - I would like to receive offers and information about product and services about taxinearu.</string>
    <string name="agree">I agree to the</string>
    <string name="conditions"><u>Terms of Services &amp; Privacy Policy.</u></string>
    <string name="terms_service"><u>Terms of Services</u> \t &amp;</string>
    <string name="privacy_policy"><u>Privacy Policy.</u></string>
    <string name="register">Are you register?</string>
    <string name="smallSignIn">Sign In</string>
    <string name="title_activity_search">Search</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_tabbed">Tabbed</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_rating">Rating</string>
    <string name="search">Search</string>
    <string name="title_activity_search_results">SearchResultsActivity</string>
    <string name="lytfllc">Lytf LLC</string>
    <string name="hello">Hello</string>
    <string name="waitingTime">{10 to 20 minutes for a taxi}</string>
    <string name="textvalue1">&#163; 5567.01</string>
    <string name="booknow">Book Now</string>
    <string name="searchcars">Search Cars</string>
    <string name="providers">Providers</string>
    <string name="availability">Availability</string>
    <string name="pricerange">Price Range</string>
    <string name="timedate">14–01–2016 1:19</string>
    <string name="title_activity_search_new">SearchNew</string>
    <string name="now">Now</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="to">To</string>
    <string name="from">From</string>
    <string name="datetime"><![CDATA[Date & Time]]></string>
    <string name="luggage">Luggage</string>
    <string name="luggages">Luggages</string>
    <string name="passengers">Passengers</string>
    <string name="searchcar">Search</string>
    <string name="book">Book</string>
    <string name="account">Account</string>
    <string name="miles">Miles</string>
    <string name="journey">Journey</string>
    <string name="title_activity_extra">extra</string>
    <string name="title_activity_hello">hello</string>
    <string name="title_activity_raear">Raear</string>
    <string name="title_activity_main">Search</string>
    <string name="filter">Filter</string>
    <string name="title_activity_account">Account</string>
    <string name="general_info">General Information</string>
    <string name="person_name">John Smith</string>
    <string name="security">Account Security</string>
    <string name="payment">Payment</string>
    <string name="Credits">Credits</string>
    <string name="lostitems">Lost Item</string>
    <string name="login">Log In</string>
    <string name="title_activity_booking_info">Booking Info</string>
    <string name="extra_add">Aberdeen, Aberdeen City,UK</string>
    <string name="journey_date_time"><![CDATA[Journey Date & Time]]></string>
    <string name="vehicle_type">Vehicle Type</string>
    <string name="digital">03–02–2016 12:26AM</string>
    <string name="sedan">Sedan</string>
    <string name="provider_name">Taxi Provider Name</string>
    <string name="fare_cost">Fare Cost</string>
    <string name="fare_cost_value">1000</string>
    <string name="estimatetime">Estimated Time</string>
    <string name="estimatetimevalue">8:57 Hours</string>
    <string name="estimatemiles">Estimate Miles</string>
    <string name="estimatemilesvalue">559 Miles</string>
    <string name="triptype">TripType</string>
    <string name="single">Single</string>
    <string name="confirmnext"><![CDATA[Confirm & Next]]></string>
    <string name="title_activity_personal_info">Personal Info</string>
    <string name="firstName">Keval</string>
    <string name="lastName">Cholera</string>
    <string name="mobile_no">Mobile Number</string>
    <string name="myno">8460121117</string>
    <string name="email_add">Email Address</string>
    <string name="email_address">kevalcholera@gmail.com</string>
    <string name="checkbox_text">Get a free SMS confirmation about your trip!</string>
    <string name="checkbox_textdown">By option to receive text, you agree with the terms of our private policy</string>
    <string name="add_info">Additional Information</string>
    <string name="e.g">e.g. Flight number, luggage details, door number, child seat, wheelchair, promotional code.</string>
    <string name="google">Google</string>
    <string name="ad">Ad</string>
    <string name="title_activity_partner_rating">PartnerRating</string>
    <string name="title_activity_maps">Map_hi</string>
    <string name="sundaytime">12:00PM - 04:00PM</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="money">$ 18.00</string>
    <string name="partner_rating">Partner Rating</string>
    <string name="rating_no">1500</string>
    <string name="review_text">Loreum Ipsem is Simply dummy text of the printing and typessetting Industry . loreum ipSum has been the industry\'s standard dummy text ever since the 1500s</string>
    <string name="done">Done</string>
    <string name="please_answer_for_security_question">Please Answer for Security Question</string>
    <string name="terms_conditions_error">You must agree with Terms of Services &amp; Privacy Policy</string>
    <string name="via1">Via1</string>
    <string name="via">Via</string>
    <string name="via2">Via2</string>
    <string name="providername">Keval Cholera</string>
    <string name="to_hint">Aaron\'s Hill, Godalming,Survey</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="str_atv_places">Enter Place Here</string>
    <string name="submit">Submit</string>
    <string name="rating">Rating</string>
    <string name="timewait">(10–20 mins for a Taxi)</string>
    <string name="logout">Log Out</string>
    <string name="html"><![CDATA[<p>406.00<p>]]]></string>
    <string name="title_activity_zzzzz">ZZZZZ</string>
    <string name="johnsmith_gmail_com">JohnSmith@gmail.com</string>
    <string name="change_email">Change Email Address</string>
    <string name="alternate_email_id">Alternate Email Address</string>
    <string name="alternate_email_id_">Alternate Email Address :</string>
    <string name="johnsmith123_gmail_com">JohnSmith123@gmail.com</string>
    <string name="change_alternate_email">Change Alternate Email Address</string>
    <string name="remove_alternate_email">Remove</string>
    <string name="security_question_1">Security Question 1</string>
    <string name="security_question">Security Question :</string>
    <string name="in_which_city_or_town_did_your_mother_and_father_live">In which city or town did your mother and father live?</string>
    <string name="security_question_2">Security Question 2</string>
    <string name="change_security_question">Change Security Question</string>
    <string name="change_password">Change password</string>
    <string name="yes_i_would_like_to_receive_offers_and_infromation_about_products_and_services_about_taxinearu">Yes, I would like to receive offers and infromation about products and services about Taxinearu.</string>
    <string name="email_id">Email Address</string>
    <string name="email_id_">Email Address :</string>
    <string name="_03_02_2016">03/02/2016</string>
    <string name="_16_20am">16:20am</string>
    <string name="from_">From : </string>
    <string name="to_">To :</string>
    <string name="battern_parks_rd_london_sw8_uk">Battern Parks Rd, London SW8, UK</string>
    <string name="solihull_rd_shiral_sohill_west_midland_b90s_3lg_uk">Solihull Rd, Shiral,Sohill, West Midland B90s 3LG, UK</string>
    <string name="hull_uk">Hull, UK</string>
    <string name="via_1">Via 1 :</string>
    <string name="via_2">Via 2 :</string>
    <string name="_02">02</string>
    <string name="lyft_llc">Lyft LLC</string>
    <string name="taxi_provider">Taxi Provider</string>
    <string name="_01_46_hrs">01:46 hrs</string>
    <string name="eta">ETA</string>
    <string name="_230_miles">230 miles</string>
    <string name="distance">Distance</string>
    <string name="ride_type">Ride Type</string>
    <string name="_350_00">$350.00</string>
    <string name="confirm">Confirm</string>
    <string name="hampshire_uk">Hampshire, UK</string>
    <string name="how_was_your_trip">How was your trip?</string>
    <string name="_3_5">3/5</string>
    <string name="do_you_wish_to_leave_a_comment">Do you wish to leave a comment?</string>
    <string name="really_enjoyed_the_trip">Really enjoyed the trip…</string>
    <string name="are_you_happy_with_this_service_that_taxinearu_provided">Are you happy with this service that Taxinearu Provided?</string>
    <string name="reset_all">Reset All</string>
    <string name="low">Low</string>
    <string name="high">High</string>
    <string name="booking_type">Booking Type</string>
    <string name="return_">Return</string>
    <string name="price">Price</string>
    <string name="luxury">Luxury</string>
    <string name="john">John</string>
    <string name="smith">Smith</string>
    <string name="mobile">Mobile</string>
    <string name="_987896542">987896542</string>
    <string name="update_profile">Update Profile</string>
    <string name="how_did_you_hear_about_us">How did you hear about us?</string>
    <string name="enter_email_id_">Enter Email address</string>
    <string name="enter_contact_no">Enter contact number</string>
    <string name="enter_name">Enter name</string>
    <string name="confirm_amp_next"><![CDATA[Confirm & Next]]></string>
    <string name="enter_additional_information">Enter Additional Information…</string>
    <string name="email_add_">Email Address :</string>
    <string name="name_">Name :</string>
    <string name="message_">Message :</string>
    <string name="subject_">Subject :</string>
    <string name="contact_no">Contact Number</string>
    <string name="enter_sub">Enter subject</string>
</resources>